trunk/Archive/61fd2f2b5fea42a2ac431a711f4816f3-803889f054654ad4b92ce24ea171578e/output
+ g++ -O2 -Wall -pedantic -pthread -std=c++11 main.cpp
main.cpp: In instantiation of ‘T& array<T, count>::operator[](std::integral_constant<int, N>) [with int N = 3; T = float; int count = 3]’:
main.cpp:26:31:   required from here
main.cpp:9:14: error: size of array is negative
         char index_is_too_large[(N<count)*2-1]={};
              ^
